# L.A.D

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  DJANGO_MESH_API_GUIDE.md  GAZEBO_CAMERA_DEBUG.md  GAZEBO_CAMERA_FEATURES.md  GAZEBO_CHANGES_SUMMARY.md  GAZEBO_FIXES_COMPLETE.md  GAZEBO_INTEGRATION.md  GAZEBO_QUICKSTART.md  GAZEBO_SETUP.md  GAZEBO_SLIDE_ADDED.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  L.A.D.sln  LIDAR_VISUALIZATION_SETUP.md  README.md  ROS2D_REMOVAL_NOTE.md  SETUP_GUIDE.md  VEHICLE_DYNAMICS_SETUP.md  deploy-to-server.sh  docker-compose.server.yml  installer.bat  installer.sh
.claude/: project-context.md  settings.local.json  settings.local.json.backup
AVEDU/: .dockerignore  Dockerfile  package-lock.json  package.json
LAD/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh
config/: ip_config.example.json  ip_config.json
docs/: CLIENT_SIDE_RENDERING.md  GAZEBO_CAMERA_OPTIONS.md  GAZEBO_CAMERA_TROUBLESHOOTING.md  GPU_RENDERING_STATUS.md  NVIDIA_DOCKER_WSL2_SETUP.md  QCAR_CAMERA_POSITIONS.md  X11_FORWARDING_SETUP.md
k8s/: README.md  configmap.yaml  deployment-backend.yaml  deployment-frontend.yaml  deployment-ros.yaml  ingress-fixed.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secrets.yaml  service-backend.yaml  service-frontend.yaml  service-ros.yaml
qcar_docker/qcar/rosws/src/qcar_bringup/: package.xml  setup.cfg  setup.py
qcar_docker/qcar/rosws/src/qcar_bringup/launch/: gazebo_sim.launch.py  lidar_wall_test.launch.py  web_viz.launch.py
qcar_docker/qcar/rosws/src/qcar_bringup/qcar_bringup/: dummy_camera_publisher.py
scripts/: set-ip.js  (+4 more)
(+261 files in other folders)
