<?xml version="1.0"?>
<package format="3">
  <name>qcar_bringup</name>
  <version>0.1.0</version>
  <description>Bringup para visualización web (URDF+TF) y servicios opcionales</description>

  <maintainer email="you@example.com">isoLina</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rosapi</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>tf2_web_republisher_py</exec_depend>
  <exec_depend>web_video_server</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
